77- Added API Doc for Products, GetProducts and createProduct, reorganize the docs, moved to root path
